<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".presentation.screens.CatDetailsFragment">

    <ImageView
        android:id="@+id/catImage"
        android:layout_width="@dimen/dp_350"
        android:layout_height="@dimen/dp_350"
        android:layout_marginTop="@dimen/dp_50"
        android:contentDescription="@string/cat_image"
        android:scaleType="centerCrop"
        android:src="@drawable/pet_icon_light_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:id="@+id/catGridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:orientation="horizontal"
        android:rowCount="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/catImage">

        <include
            layout="@layout/cat_details"
            app:layout_constraintTop_toBottomOf="@id/catImage" />

    </GridLayout>

    <TextView
        android:id="@+id/catDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/catGridLayout" />

    <TextView
        android:id="@+id/findOutMore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_15"
        android:text="@string/find_out_more"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/catDescription" />

    <TextView
        android:id="@+id/wikipediaUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="@dimen/dp_15"
        android:text="@string/wikipedia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/findOutMore" />

    <TextView
        android:id="@+id/vetStreetUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="@dimen/dp_15"
        android:text="@string/vet_street"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wikipediaUrl" />

</androidx.constraintlayout.widget.ConstraintLayout>